@@ -1,5 +1,15 @@
 2012-02-22  Kaz Kylheku  <kaz@kylheku.com>
 
+	* lib.c (sub_list, replace_list, lazy_sub_str, sub_str,
+	replace_str, sub_vec, replace_vec): Implementing floating zero
+	behavior. This is necessary so that the important case index .. (+
+	index 1) for selecting one element as a subrange works even if index is
+	negative.
+
+	* txr.1: Floating zero behavior for ranges documented.
+
+2012-02-22  Kaz Kylheku  <kaz@kylheku.com>
+
 	* eval.c (dwim_loc): del operator's return value is the
 	deleted range of values. Missing del cases added for single
 	index cases.
